@@ -56,6 +56,7 @@
       <li><a href="rdoc/classes/Roda/RodaPlugins/Assets.html">assets</a>: Adds support for rendering CSS/JS javascript assets on the fly in development, or compiling them into a single compressed file in production.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/AssetsPreloading.html">assets_preloading</a>: Adds support for generating browser-hinting preload link tags and headers.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/BranchLocals.html">branch_locals</a>: Adds ability to specify defaults for template locals on a per-branch basis.</li>
+      <li><a href="rdoc/classes/Roda/RodaPlugins/CaptureERB.html">capture_erb</a>: Allows capturing the output of ERB template blocks, instead of injecting them into the template output.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/Chunked.html">chunked</a>: Adds support for streaming template responses using Transfer-Encoding: chunked.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/ContentFor.html">content_for</a>: Allows storage of content in one template and retrieval of that content in a different template.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/ExceptionPage.html">exception_page</a>: Shows page with debugging information for exceptions, designed for use in error handler in development mode.</li>
